tested a setAttribute for a click to trigger a function

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     </div>
 <button id="clickMe">Click Me</button>
-<div id="tile">
-    0
+<div id="tile" class="border">
+Trying out this new idea
 </div>
 </body>
 </html>
